--- a/frontend/app/templates/components/encryptable-file/form.hbs
+++ b/frontend/app/templates/components/encryptable-file/form.hbs
@@ -28,7 +28,7 @@
                             @onfileadd={{this.uploadFile}}
                             @ondrop={{this.uploadFile}}
                             class="btn btn-primary">
-                  <a id="upload-file" tabindex="0">{{t (if this.changeset.file "encryptable_files.new.reupload" "encryptable_files.new.upload_file")}}.</a>
+                  <a id="upload-file" tabindex="0">{{t (if this.changeset.file "encryptable_files.new.reupload" "encryptable_files.new.upload_file")}}</a>
                 </FileUpload>
               </div>
             </div>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-  </Modal.body>
+    </Modal.body>
   <Modal.footer>
     <BsButton @onClick={{action this.submit this.changeset}} @type="primary">{{t "encryptable_files.new.upload"}}</BsButton>
     <BsButton @onClick={{action this.abort}} @type="secondary">{{t "close"}}</BsButton>
