Remove bug when creating Encryptable::Credentials and adjust frontend to transferred files

--- a/frontend/app/templates/components/file-transfer.hbs
+++ b/frontend/app/templates/components/file-transfer.hbs
@@ -66,6 +66,6 @@
   </Modal.body>
 
   <Modal.footer>
-    <BsButton @onClick={{action this.submit this.changeset}} @type="primary">{{t "encryptable_files.new.upload"}}</BsButton>
+    <BsButton @onClick={{action this.submit this.changeset}} @type="primary">{{t "encryptable/transferring/file.submit"}}</BsButton>
   </Modal.footer>
 </BsModal>
