--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -4,6 +4,25 @@
 <div id={{concat "loader-encryptable-" @encryptable.id}} {{did-insert this.setupInViewport}}>
 </div>
 {{#if this.isShown}}
+  {{#if this.isTransferredFile}}
+    <div class="row d-flex align-items-center p-2 bg-grey-2 rounded encryptable-entry">
+      <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
+        {{@encryptable.name}}
+      </LinkTo>
+
+      <div class="col-md-auto d-none d-md-block">
+        <a class="mx-1" role="button" {{on "click" this.toggleEncryptableDownload}}>
+          <img class="icon-medium-button d-inline" src="/assets/images/file_download.svg" alt="download file">
+          <BsTooltip @title={{t "encryptable/transferring/file.download"}} @delayShow="1000" />
+        </a>
+
+        <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
+          <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
+          <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
+        </DeleteWithConfirmation>
+      </div>
+    </div>
+  {{else}}
   <div class="row d-flex align-items-center p-2 bg-grey-2 rounded encryptable-entry">
     {{#if @encryptable.isOseSecret}}
       <div class="col-auto pr-0 my-2">
@@ -56,17 +75,18 @@
       </div>
     {{/unless}}
 
-    <div class="col-md-auto d-none d-md-block">
-      {{#unless @encryptable.isOseSecret}}
-        <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
-          <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
-          <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
-        </a>
-      {{/unless}}
-      <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
-        <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
-        <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
-      </DeleteWithConfirmation>
+      <div class="col-md-auto d-none d-md-block">
+        {{#unless @encryptable.isOseSecret}}
+          <a class="mx-1" role="button" {{on "click" this.toggleEncryptableEdit}}>
+            <img class="icon-medium-button d-inline" src="/assets/images/edit.svg" alt="edit">
+            <BsTooltip @title={{t "encryptable/credentials.edit.title"}} @delayShow="1000" />
+          </a>
+        {{/unless}}
+        <DeleteWithConfirmation @class="mx-1" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
+          <img class="icon-medium-button d-inline" src="/assets/images/delete.svg" alt="delete">
+          <BsTooltip @title={{t "tooltips.delete_encryptables"}} @delayShow="1000" />
+        </DeleteWithConfirmation>
+      </div>
     </div>
-  </div>
+  {{/if}}
 {{/if}}
