Adjust file transfer UI

--- a/frontend/app/styles/encryptable-show.scss
+++ b/frontend/app/styles/encryptable-show.scss
@@ -105,3 +105,11 @@
 .show-password-button {
   z-index: 5;
 }
+
+.transfer-file-upload {
+  margin-top: 0.5rem;
+}
+
+.transfer-file-description {
+  margin-bottom: 0.5rem;
+}
