--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -55,7 +55,7 @@
       <div class="result-username">
         <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
         <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}}
-          title={{if @encryptable.isPasswordBlank this.noCopyBlankUsernameTooltip ''}}
+          title={{if @encryptable.isPasswordBlank this.noCopyBlankUsernameTooltip ""}}
           @success={{fn this.onCopied "username"}} disabled={{@encryptable.isUsernameBlank}} >
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
         </CopyButton>
@@ -64,7 +64,7 @@
       <div class="result-password">
         <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
         <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}}
-          title={{if @encryptable.isPasswordBlank this.noCopyBlankPasswordTooltip ''}}
+          title={{if @encryptable.isPasswordBlank this.noCopyBlankPasswordTooltip ""}}
           @success={{fn this.onCopied "password"}} disabled={{@encryptable.isPasswordBlank}} >
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
         </CopyButton>
