Fix linting error

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -24,7 +24,8 @@
           <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "username"}}/>
           <a role="button"
              class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"
-             {{on "click" this.showUsername}}>{{t "encryptable/credentials.show.show_username"}}</a>
+             {{on "click" this.showUsername}}>{{t "encryptable/credentials.show.show_username"}}
+          </a>
         </div>
       </div>
       <div class="col px-0 d-none d-md-block">
