--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -21,27 +21,37 @@
     {{#unless @encryptable.isOseSecret}}
       <div class="col-2 pr-0 d-none d-md-block">
         <div class="hide-wrapper">
-          <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
-          <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"{{on "click" this.showUsername}}>{{t "encryptable/credentials.show.show_username"}}</a>
+          <Input class="d-inline form-control" id="input-password-{{@encryptable.id}}" @disabled="true" @value={{format-cleartext @encryptable "username"}}/>
+          <a role="button"
+             class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isUsernameVisible "visibility-hidden"}}"
+             {{on "click" this.showUsername}}>
+            {{t "encryptable/credentials.show.show_username"}}
+          </a>
         </div>
       </div>
       <div class="col px-0 d-none d-md-block">
-        <button class="btn btn-light copy-btn" {{on "click" this.copyUsername}}>
+        <button class="btn btn-light copy-btn" {{on "click" this.copyUsername}}
+          disabled={{@encryptable.isUsernameBlank}} >
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-          <BsTooltip @title={{t "encryptable/credentials.show.copy_username"}} @delayShow="500" />
+          {{#unless @encryptable.isUsernameBlank}}
+            <BsTooltip @title={{t "encryptable/credentials.show.copy_username"}} @delayShow="500" />
+          {{/unless}}
         </button>
       </div>
 
       <div class="col-2 pr-0 d-none d-md-block">
         <div class="hide-wrapper">
-          <Input class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
+          <Input class="d-inline form-control" @disabled="true" @value={{format-cleartext @encryptable "password"}}/>
           <a role="button" class="show-text show-text-sm bg-light-blue no-wrap overflow-hidden d-flex align-items-center text-muted {{if this.isPasswordVisible "visibility-hidden"}}"{{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
         </div>
       </div>
       <div class="col pl-0 d-none d-md-block">
-        <button class="btn btn-light copy-btn" {{on "click" this.copyPassword}}>
+        <button class="btn btn-light copy-btn" {{on "click" this.copyPassword}}
+          disabled={{@encryptable.isPasswordBlank}} >
           <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-          <BsTooltip @title={{t "encryptable/credentials.show.copy_password"}} @delayShow="500" />
+          {{#unless @encryptable.isPasswordBlank}}
+            <BsTooltip @title={{t "encryptable/credentials.show.copy_password"}} @delayShow="500" />
+          {{/unless}}
         </button>
       </div>
     {{/unless}}
