Cleanup frontend, remove transferred and moved to encryptable show view

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -10,7 +10,7 @@
         <img class="icon-medium-button d-inline" src="/assets/images/file.svg" alt="file icon">
       </div>
 
-      <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptableTransferred.show" @model={{@encryptable.id}}>
+      <LinkTo class="col-4 underline-hover break-words account-link" @route="encryptables.show" @model={{@encryptable.id}}>
         {{@encryptable.name}}
       </LinkTo>
 
