--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -4,93 +4,144 @@
 {{#if this.isFileCreating}}
   <EncryptableFile::Form @class="modal_file_entry" @encryptableCredential={{@encryptable}} @title={{t "encryptable_files.new.title"}} @onAbort={{this.toggleFileNew}}/>
 {{/if}}
-<div class="container px-5 pt-4 h-100 bg-white pl-none encryptable-container-smartphone mb-15">
-  <div class="row mb-3">
-    <div class="col">
-      <a id="encryptable-show-back" role="button" {{on "click" this.transitionBack}}>
+{{#if this.isFile}}
+
+  <div class="container px-5 pt-4 h-100 bg-white pl-none encryptable-container-smartphone mb-15">
+    <div class="row mb-3">
+      <div class="col">
+        <a id="encryptable-show-back" role="button" {{on "click" this.transitionBack}}>
         <span class="btn btn-secondary edit_button" role="button">
           <img class="icon-button encryptable-show-back" src="/assets/images/arrow-left.svg" alt="back">
         </span>
-      </a>
-    </div>
-    {{#unless @encryptable.isOseSecret}}
+        </a>
+      </div>
+
       <div class="col-auto d-flex justify-content-between align-items-center">
         <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
           <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
         </DeleteWithConfirmation>
-        <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableEdit}}>
-          <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
-        </a>
       </div>
-    {{/unless}}
-  </div>
-  <div class="row pb-3 justify-content-between">
-    <div class="col-lg-9 accountname">
-      <h2 class="d-inline">{{t "encryptable/credentials.show.title"}}: {{@encryptable.name}}</h2>
     </div>
-    <div class="col-lg-9 accountname text-muted">
-      <br><p class="d-inline">{{t "encryptable/credentials.show.created_at"}}: {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}</p>
-       /
-      <p class="d-inline">{{t "encryptable/credentials.show.last_update"}}: {{moment-format @encryptable.updatedAt "DD.MM.YYYY hh:mm"}}</p>
+
+    <div class="row pb-3 justify-content-between">
+      <div class="col-lg-9 accountname">
+        <h2 class="d-inline">{{t "encryptable/credentials.show.file"}}: {{@encryptable.name}}</h2>
+      </div>
+      <div class="col-lg-9 accountname text-muted">
+        <br><p class="d-inline">{{t "encryptable/credentials.show.transferred_at"}}: {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}</p>
+      </div>
+      <div class="col-lg-9">
+        <br><p class="d-inline">{{t "encryptable/transferring/file.show.sender_name"}}: {{@encryptable.sender_name}}</p>
+      </div>
+    </div>
+
+    {{#if @encryptable.description}}
+      <div class="row pb-3">
+        <div class="col">
+          <br><p class="text-muted description">{{@encryptable.description}}</p>
+        </div>
+      </div>
+    {{/if}}
+
+    <div class="d-flex flex-row justify-content-between mb-2">
+      <div>
+        <BsButton @type="primary" {{on "click" this.toggleFileDownload}}>
+          {{t "download_file"}}
+        </BsButton>
+      </div>
     </div>
   </div>
 
-  {{#if @encryptable.description}}
-    <div class="row pb-3">
+{{else}}
+
+  <div class="container px-5 pt-4 h-100 bg-white pl-none encryptable-container-smartphone mb-15">
+    <div class="row mb-3">
       <div class="col">
-        <br><p class="text-muted description">{{@encryptable.description}}</p>
+        <a id="encryptable-show-back" role="button" {{on "click" this.transitionBack}}>
+          <span class="btn btn-secondary edit_button" role="button">
+            <img class="icon-button encryptable-show-back" src="/assets/images/arrow-left.svg" alt="back">
+          </span>
+        </a>
+      </div>
+      {{#unless @encryptable.isOseSecret}}
+        <div class="col-auto d-flex justify-content-between align-items-center">
+          <DeleteWithConfirmation @class="btn btn-light edit_button" @record={{@encryptable}} @didDelete={{this.refreshRoute}}>
+            <img class="icon-button d-inline" src="/assets/images/delete.svg" alt="delete">
+          </DeleteWithConfirmation>
+          <a id="edit_account_button" class="btn btn-secondary edit_button" role="button" {{on "click" this.toggleEncryptableEdit}}>
+            <img class="icon-button" src="/assets/images/edit.svg" alt="edit">
+          </a>
+        </div>
+      {{/unless}}
+    </div>
+    <div class="row pb-3 justify-content-between">
+      <div class="col-lg-9 accountname">
+        <h2 class="d-inline">{{t "encryptable/credentials.show.title"}}: {{@encryptable.name}}</h2>
+      </div>
+      <div class="col-lg-9 accountname text-muted">
+        <br><p class="d-inline">{{t "encryptable/credentials.show.created_at"}}: {{moment-format @encryptable.createdAt "DD.MM.YYYY hh:mm"}}</p>
+         /
+        <p class="d-inline">{{t "encryptable/credentials.show.last_update"}}: {{moment-format @encryptable.updatedAt "DD.MM.YYYY hh:mm"}}</p>
       </div>
     </div>
-  {{/if}}
-  <div>
-    {{#if @encryptable.isOseSecret}}
-      <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_secret"}}</a>
-      <div class="result-password">
-        <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@encryptable.data.ose_secret}}/>
-        <CopyButton class="btn btn-light" @clipboardText={{@encryptable.data.ose_secret}}>
-          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-        </CopyButton>
-      </div>
-    {{else}}
-      <div class="result-username">
-        <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
-        <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}}
-          title={{if @encryptable.isPasswordBlank this.noCopyBlankUsernameTooltip ""}}
-          @success={{fn this.onCopied "username"}} disabled={{@encryptable.isUsernameBlank}} >
-          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-        </CopyButton>
-      </div>
-      <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
-      <div class="result-password">
-        <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
-        <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}}
-          title={{if @encryptable.isPasswordBlank this.noCopyBlankPasswordTooltip ""}}
-          @success={{fn this.onCopied "password"}} disabled={{@encryptable.isPasswordBlank}} >
-          <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
-        </CopyButton>
+
+    {{#if @encryptable.description}}
+      <div class="row pb-3">
+        <div class="col">
+          <br><p class="text-muted description">{{@encryptable.description}}</p>
+        </div>
       </div>
     {{/if}}
-  </div>
-  <div class="d-flex flex-row justify-content-between mb-2">
     <div>
-      <h3>{{t "encryptable/credentials.show.attachments"}}</h3>
+      {{#if @encryptable.isOseSecret}}
+        <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_secret"}}</a>
+        <div class="result-password">
+          <Input id="cleartext_password" class="d-inline form-control" @disabled="true" @value={{@encryptable.data.ose_secret}}/>
+          <CopyButton class="btn btn-light" @clipboardText={{@encryptable.data.ose_secret}}>
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{else}}
+        <div class="result-username">
+          <Input id="cleartext_username" class="d-inline form-control" @disabled="true" @value={{@encryptable.cleartextUsername}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextUsername}}
+            title={{if @encryptable.isPasswordBlank this.noCopyBlankUsernameTooltip ""}}
+            @success={{fn this.onCopied "username"}} disabled={{@encryptable.isUsernameBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+        <a role="button" class="correct-pixel-error-omg show-password-button show-text {{if this.isPasswordVisible "visibility-hidden"}}" {{on "click" this.showPassword}}>{{t "encryptable/credentials.show.show_password"}}</a>
+        <div class="result-password">
+          <Input id="cleartext_password" class="d-inline form-control {{if this.isPasswordVisible "" "visibility-hidden"}}" @disabled="true" @value={{@encryptable.cleartextPassword}}/>
+          <CopyButton class="btn btn-light copy-btn" @clipboardText={{@encryptable.cleartextPassword}}
+            title={{if @encryptable.isPasswordBlank this.noCopyBlankPasswordTooltip ""}}
+            @success={{fn this.onCopied "password"}} disabled={{@encryptable.isPasswordBlank}} >
+            <img class="icon-clippy img d-inline" src="/assets/images/clipboard.svg" alt="clip">
+          </CopyButton>
+        </div>
+      {{/if}}
     </div>
-    <div>
-      <BsButton @type="primary" {{on "click" this.toggleFileNew}}>
-        {{t "encryptable/credentials.show.add_attachment"}}
-      </BsButton>
+    <div class="d-flex flex-row justify-content-between mb-2">
+      <div>
+        <h3>{{t "encryptable/credentials.show.attachments"}}</h3>
+      </div>
+      <div>
+        <BsButton @type="primary" {{on "click" this.toggleFileNew}}>
+          {{t "encryptable/credentials.show.add_attachment"}}
+        </BsButton>
+      </div>
     </div>
+    <table class="table table-striped">
+      <tbody>
+        <tr>
+          <th>{{t "encryptable/credentials.show.file"}}</th>
+          <th class="description">{{t "description"}}</th>
+          <th>{{t "actions"}}</th>
+        </tr>
+        {{#each @encryptable.encryptableFiles as |encryptableFile|}}
+          <EncryptableFile::Row @encryptableFile={{encryptableFile}}/>
+        {{/each}}
+      </tbody>
+    </table>
   </div>
-  <table class="table table-striped">
-    <tbody>
-      <tr>
-        <th>{{t "encryptable/credentials.show.file"}}</th>
-        <th class="description">{{t "description"}}</th>
-        <th>{{t "actions"}}</th>
-      </tr>
-      {{#each @encryptable.encryptableFiles as |encryptableFile|}}
-        <EncryptableFile::Row @encryptableFile={{encryptableFile}}/>
-      {{/each}}
-    </tbody>
-  </table>
-</div>
+{{/if}}
