--- a/frontend/app/templates/encryptables/show.hbs
+++ b/frontend/app/templates/encryptables/show.hbs
@@ -1,1 +1,1 @@
-<Encryptable::Show @encryptable={{this.model.encryptableCredential}} @encryptableFiles={{this.model.encryptableFiles}}/>
+<Encryptable::Show @encryptable={{this.model.encryptable}} @encryptableFiles={{this.model.encryptableFiles}}/>
