Prepare branch for handover

--- a/frontend/app/templates/components/encryptable/row.hbs
+++ b/frontend/app/templates/components/encryptable/row.hbs
@@ -22,7 +22,7 @@
       </div>
 
       <div class="col-md-auto d-none d-md-block">
-        <a class="mx-1" role="button" {{on "click" this.toggleEncryptableDownload}}>
+        <a class="mx-1" role="button" {{on "click" this.encryptableFileDownload}}>
           <img class="icon-medium-button d-inline" src="/assets/images/file_download.svg" alt="download file">
           <BsTooltip @title={{t "download_file"}} @delayShow="1000" />
         </a>
