--- a/frontend/app/templates/components/encryptable/show.hbs
+++ b/frontend/app/templates/components/encryptable/show.hbs
@@ -45,7 +45,7 @@
 
     <div class="d-flex flex-row justify-content-between mb-2">
       <div>
-        <BsButton @type="primary" {{on "click" this.toggleFileDownload}}>
+        <BsButton @type="primary" {{on "click" this.encryptableFileDownload}}>
           {{t "download_file"}}
         </BsButton>
       </div>
