Return number of unread transferred files in folder serializer, display number in badge on personal team and remove it if read

--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -30,12 +30,8 @@
                   {{/if}}
                   {{#if team.isPersonalTeam}}
                     {{truncate this.userService.username 18}}
-                    {{#unless (eq team.unreadTransferredFiles 0)}}
-                      {{#if (eq team this.navService.selectedTeam)}}
-                        <div class="notification-badge"></div>
-                      {{else}}
-                        <div class="notification-badge notification-badge-color">{{team.unreadTransferredFiles}}</div>
-                      {{/if}}
+                    {{#unless (eq team.unreadTransferredFilesInFolders 0)}}
+                      <div class="notification-badge notification-badge-color">{{team.unreadTransferredFilesInFolders}}</div>
                     {{/unless}}
                   {{else}}
                     {{truncate team.name 18}}
