--- a/frontend/app/templates/components/side-nav-bar.hbs
+++ b/frontend/app/templates/components/side-nav-bar.hbs
@@ -38,9 +38,9 @@
                   {{/if}}
                   {{#if (not team.folders)}}
                   {{else if (and team.folders (or (not (eq team this.navService.selectedTeam)) this.collapsed))}}
-                    <img class="icon icon-button-angle float-right {{if team.isPersonalTeam "icon-button-angel-personal-team"}}" src="/assets/images/{{if (eq team this.navService.selectedTeam) "angle-left-white.svg" "angle-left.svg"}}" alt="<">
+                    <img class="icon icon-button-angle float-right" src="/assets/images/{{if (eq team this.navService.selectedTeam) "angle-left-white.svg" "angle-left.svg"}}" alt="<">
                   {{else}}
-                    <img class="icon icon-button-angle float-right {{if team.isPersonalTeam "icon-button-angel-personal-team"}}" src="/assets/images/{{if (eq team this.navService.selectedTeam) "angle-down-white.svg" "angle-down.svg"}}" alt="v">
+                    <img class="icon icon-button-angle float-right" src="/assets/images/{{if (eq team this.navService.selectedTeam) "angle-down-white.svg" "angle-down.svg"}}" alt="v">
                   {{/if}}
                 </a>
                 {{#if (or team.folders (eq team this.navService.selectedTeam))}}
