Start implementing feedback

--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -56,7 +56,7 @@
         </ddm.item>
       </dd.menu>
     </BsDropdown>
-    <div class="d-flex align-items-center text-share-file" href="https://github.com/puzzle/cryptopus/wiki/User-manual">
+    <div class="d-flex align-items-center dropdown-toggle">
       <a role="button" {{on "click" this.toggleFileSharing}}>
         <img class="icon-share-file" src="/assets/images/share-blue.svg" alt="shareIcon">
         <span>{{t "encryptable/credentials.share.title"}}</span>
